<resources>
    <string name="app_name">AA101</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perKilogram">/Kg</string>
    <string name="Kilogram_unit">Kg</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="received_date">Received Date</string>
    <string name="content_desc_open_calendar">Open Calendar</string>
    <string name="sales_date">Sales Date</string>
    <string name="choose_party_trademark">Choose party</string>
    <string name="customer_name">Customer Name</string>
    <string name="boxes_count">No. of Boxes</string>
    <string name="boxes_type">Type of Boxes</string>
    <string name="transport_medium">Transport Medium</string>
    <string name="transport_detail_optional">Transport Detail (Optional)</string>
    <string name="proceed">Proceed</string>
    <string name="customer_initial">Customer Initial</string>
    <string name="email_id">Email id</string>
    <string name="address">Address</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="mob_no">Mob No.</string>
    <string name="supplier_trademark">Supplier Trademark</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="add_customer">Add Customer</string>
    <string name="credit">Credit</string>
    <string name="debit">Debit</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="record_payment">Record Payment</string>
    <string name="view_customer_balances">View Customer Balances</string>
    <string name="view_party_balances">View Party Balances</string>
    <string name="view_expenses">View Expenses</string>
    <string name="view_sales">View Sales</string>
    <string name="record_expense">Record Expense</string>
    <string name="new_sales_entry">New Sales Entry</string>
    <string name="choose_your_action">Choose your Action</string>
    <string name="welcome_to_aa_data_entry_app">Welcome to AA data entry app.</string>
    <string name="payments">Payments</string>
    <string name="new_sales_sliip">New Sales Slip</string>
    <string name="sales_entry">Sales Entry</string>
    <string name="record_credit_payment">Record a Credit Payment</string>
    <string name="record_debit_payment">Record a Debit Payment</string>
    <string name="received_from">Received from</string>
    <string name="paid_to">Paid to</string>
</resources>