<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.aa101.screen.AddSupplierViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddSupplierFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbar_add_supplier_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/add_supplier"
                app:navigationIcon="@drawable/ic_round_white_arrow_back_24"
                />
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_supplier_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_bw_new_sales_data_block"
            android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
            android:layout_marginEnd="@dimen/space_bw_new_sales_data_block"
            android:hint="@string/supplier_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_add_supplier_fragment">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_supplier_trademark"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
            android:hint="@string/supplier_trademark"
            app:layout_constraintEnd_toEndOf="@+id/til_supplier_name"
            app:layout_constraintStart_toStartOf="@+id/til_supplier_name"
            app:layout_constraintTop_toBottomOf="@+id/til_supplier_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_supplier_trademark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_supplier_phone_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
            android:hint="@string/mob_no"
            app:layout_constraintEnd_toEndOf="@+id/til_supplier_trademark"
            app:layout_constraintStart_toStartOf="@+id/til_supplier_trademark"
            app:layout_constraintTop_toBottomOf="@+id/til_supplier_trademark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_supplier_phone_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_supplier_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
            android:hint="@string/email_id"
            app:layout_constraintEnd_toEndOf="@+id/til_supplier_phone_no"
            app:layout_constraintStart_toStartOf="@+id/til_supplier_phone_no"
            app:layout_constraintTop_toBottomOf="@+id/til_supplier_phone_no">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_supplier_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_supplier_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
            android:hint="@string/address"
            app:layout_constraintEnd_toEndOf="@+id/til_supplier_email"
            app:layout_constraintStart_toStartOf="@+id/til_supplier_email"
            app:layout_constraintTop_toBottomOf="@+id/til_supplier_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tied_supplier_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_bw_new_sales_data_block"
            android:layout_marginEnd="@dimen/space_bw_new_sales_data_block"
            android:layout_marginBottom="@dimen/_32dp_margin"
            android:onClick="@{() -> vm.onAddClicked()}"
            android:text="@string/add_supplier"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>