<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordPaymentFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tblayout_credit_debit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit" />

    </com.google.android.material.tabs.TabLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_bw_new_sales_data_block"
        android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
        android:layout_marginEnd="@dimen/space_bw_new_sales_data_block"
        android:hint="Payment Date"
        app:endIconDrawable="@drawable/ic_twotone_calendar_24"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tblayout_credit_debit">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_payment_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
        android:hint="Amount"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tied_payment_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_payment_to_from"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/material_t_i_l_height"
        android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
        app:layout_constraintEnd_toEndOf="@+id/til_payment_amount"
        app:layout_constraintStart_toStartOf="@+id/til_payment_amount"
        app:layout_constraintTop_toBottomOf="@+id/til_payment_amount">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/tied_payment_to_from"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="hint"
            android:paddingStart="@dimen/_16dp_margin"
            android:paddingTop="@dimen/_4dp_margin"
            android:paddingEnd="@dimen/_16dp_margin"
            android:paddingBottom="@dimen/_4dp_margin"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_payment_detail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_bw_new_sales_data_block"
        android:hint="@string/payment_detail"
        app:layout_constraintEnd_toEndOf="@+id/til_payment_to_from"
        app:layout_constraintStart_toStartOf="@+id/til_payment_to_from"
        app:layout_constraintTop_toBottomOf="@+id/til_payment_to_from"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tied_payment_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>